Adicionando cor no botão e animação
Adicionando cor no botão e animação com um loader em CSS puro após o clique,

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -15,7 +15,15 @@
             </div>
             <div class="input-box">
                 <input type="button" value="Confirmar" id="submitButton">
-            </div>
+            </div>            
+            <!--LOADER em puro CSS-->
+                <div class="lds-ring">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            <!--LOADER em puro CSS-->
         </form>
     </div>
     <script src="./script.js"></script>
