--- a/redirect/index.html
+++ b/redirect/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +11,19 @@
         <form action="" id="form">
             <h1>Confirme o seu e-mail de assinante:</h1>
             <div class="input-box">
-                <input type="email" name="inputemail" id="inputemail" placeholder="Digite seu e-mail de assinante">
+                <input type="email" name="inputEmail" id="inputEmail" placeholder="Digite seu e-mail de assinante">
             </div>
             <div class="input-box">
                 <input type="button" value="Confirmar" id="submitButton">
             </div>            
-            <!--LOADER em puro CSS-->
+            <!--LOADER em CSS puro-->
                 <div class="lds-ring">
                     <div></div>
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-            <!--LOADER em puro CSS-->
+            <!--LOADER em CSS puro-->
         </form>
     </div>
     <script src="./script.js"></script>
