Atualizando form type
Atualizando form type para aceitar envio a partir do pressionar a tecla enter. Retirando necessidade de precisar de listener de evento click via javascript.

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="form-wrapper">
-        <form action="" id="form">
+        <form action="javascript: consultar()" id="form">
             <h1>Confirme o seu e-mail de assinante:</h1>
             <div class="input-box">
                 <input type="email" name="inputEmail" id="inputEmail" placeholder="Digite seu e-mail de assinante">
             </div>
             <div class="input-box">
-                <input type="button" value="Confirmar" id="submitButton">
+                <input type="submit" value="Confirmar" id="submitButton">
             </div>            
             <!--LOADER em CSS puro-->
                 <div class="lds-ring">
