--- a/redirect/index.html
+++ b/redirect/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Renovação Antecipada - ONM 2023</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="form-wrapper">
-        <form action="javascript: consultar()" id="form">
-            <h1>Confirme o seu e-mail de assinante:</h1>
-            <div class="input-box">
-                <input type="email" name="inputEmail" id="inputEmail" placeholder="Digite seu e-mail de assinante">
-            </div>
-            <div class="input-box">
-                <input type="submit" value="Confirmar" id="submitButton">
-            </div>            
-            <!--LOADER em CSS puro-->
-                <div class="lds-ring">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            <!--LOADER em CSS puro-->
-        </form>
+      <form action="javascript: consultar()" id="form">
+        <h1>Confirme o seu e-mail de assinante:</h1>
+        <div class="input-box">
+          <input
+            type="email"
+            name="inputEmail"
+            id="inputEmail"
+            placeholder="Digite seu e-mail de assinante"
+          />
+        </div>
+        <div class="input-box">
+          <input type="submit" value="Confirmar" id="submitButton" />
+        </div>
+        <!--LOADER em CSS puro-->
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <!--LOADER em CSS puro-->
+      </form>
     </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
