--- a/verificacao/index.html
+++ b/verificacao/index.html
@@ -179,7 +179,7 @@
         </div>
         <!--LOADER em CSS puro-->
       </form>
-    <footer>O Novo Mercado Escola de Marketing LTDA </br> Todos os direitos reservados</footer>
+    <footer>© 2023 O Novo Mercado </br> Todos os Direitos Reservados</footer>
     </div>
     <script>
         var inputEmail = window.document.querySelector("#inputEmail");
