--- a/verificacao/index.html
+++ b/verificacao/index.html
@@ -276,17 +276,12 @@
         function getSCK() {
             var queryStringURL = window.location.search;
             queryStringURL = queryStringURL.toLowerCase();
-            console.log(queryStringURL);
             const urlParams = new URLSearchParams(queryStringURL);
 
             if (urlParams.has('sck')) {
-                console.log("Existe SCK, será usado na URL de renovação antecipada.");
                 var SCK = urlParams.get('sck');
-                console.log(SCK);
             } else {
                 var SCK = "rabw2023";
-                console.log("NÃO Existe SCK. Foi preenchido com rabw2023.");
-                console.log(SCK);
             }
 
             return SCK;
@@ -313,10 +308,9 @@
         }
 
         //Função para avançar no caminho "Não sou Aluno", redirecionando para o checkout Hotmart
-        function caminhoNaoAluno() {            
-            //NECESSÁRIO TROCAR LINK!
-            window.location.href = 'https://pay.hotmart.com/I11728780W?off=jwn1nzud&checkoutMode=10&sck=blackweek';
-            //NECESSÁRIO TROCAR LINK!
+        function caminhoNaoAluno() {
+            var sckHotmart = getSCK();            
+            window.location.href = `https://pay.hotmart.com/I11728780W?off=aw60ekjd&checkoutMode=10&sck=${sckHotmart}`;
         }
 
         //Função para mudar a estética do form enquanto faz consulta de API
@@ -383,11 +377,12 @@
                             )}`;
                             window.location.href = urlHotmart;
                             aestheticOff();
+                            console.log("Executei sucesso.");
                         } else {
                             alert(
                                 "Este email não está na lista de assinantes elegíveis para a oferta. Por favor, tente com outro e-mail ou entre em contato com o nosso Suporte."
                             );
-                            console.log("Executei.");
+                            console.log("Executei erro.");
                             aestheticOff();
                         }
                     });
